<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_maps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.makererequickresponse.mqr.MapsActivity">

    <LinearLayout
        android:id="@+id/layoutMap"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

    <TextView
        android:id="@+id/mapsemail"
        style="@style/TextView_style"
        android:paddingTop="6dp"
        android:paddingLeft="@dimen/padding_yangu"
        android:textSize="@dimen/slide_desc"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/mapsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:text="@string/Map_heading"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="@dimen/slide_desc"
        android:textStyle="bold" />



    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        tools:context="com.makererequickresponse.mqr.MapsActivity" />

    <TextView
        android:id="@+id/mapsKey"
        style="@style/TextView_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Map_desc"
        android:textSize="@dimen/slide_desc"
        android:textStyle="normal|italic"
        />

    <Button
        android:id="@+id/logoutbutton"
        style="@style/Button_style"
        android:layout_height="32dp"
        android:layout_width="150dp"
        android:text="@string/logout"
        />

    </LinearLayout>


</RelativeLayout>